[project]
name = "domg"
version = "0.2.0"
description = "Docker container fqdn resolver via hosts file"
authors = ["Cosmin <talpah@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle>=0.13.4",
    "docker>=7.1.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
domg = "src.domg.__main__:main"